--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     <div class="square square1"></div>
     <div class="square square2"></div>
     <div class="square square3"></div>
-    <div class="square square14"></div>
+    <div class="square squarer4"></div>
 </div>
 </body>
 </html>
